--- a/css/_general.scss
+++ b/css/_general.scss
@@ -14,7 +14,20 @@ select{
   padding: 5px 10px;
   height: 40px;
 }
-
+.slick-dots{
+  position: relative;
+  bottom: 0;
+  margin-top: 10px;
+}
+.slick-next{
+  right: -10px;
+}
+.slick-prev{
+  left: -10px;
+}
+.etablissement.slick-slide:hover{
+  color: $primary-color;
+}
 body {
   position: relative;
   margin: 0;
@@ -614,5 +627,23 @@ end of categories carousel
       border: none;
       padding: 10px 20px;
     }
+  }
+}
+
+div.zabuto_calendar {
+  .badge-today{
+    background-color: $dark-primary-color;
+  }
+  .table{
+    tr{
+      td.event{
+        div.day{
+          background-color: $primary-color;
+        }
+      }
+    }
+  }
+  .badge-event{
+    background-color: $primary-color;
   }
 }
