--- a/css/style.css
+++ b/css/style.css
@@ -1224,7 +1224,12 @@ span.incdicateur_ouverture {
   font-size: 12px;
   padding: 5px 10px;
   border: solid 1px #333333;
-  border-radius: 2px; }
+  border-radius: 2px;
+  text-transform: uppercase; }
+
+span.incdicateur_ouverture.ouvert {
+  border-color: green;
+  color: green; }
 
 span.incdicateur_distance {
   float: right;
