--- a/css/_page-etablissement.scss
+++ b/css/_page-etablissement.scss
@@ -244,8 +244,8 @@ span.incdicateur_ouverture{
   text-transform: uppercase;
 }
 span.incdicateur_ouverture.ouvert{
-  border-color: green;
-  color: green;
+  border-color: greenyellow;
+  color: greenyellow;
 }
 span.incdicateur_distance{
   float: right;
