--- a/css/_page-etablissement.scss
+++ b/css/_page-etablissement.scss
@@ -6,6 +6,7 @@
   }
   .social-sharing{
     overflow: hidden;
+    margin-bottom: 15px;
     ul{
       list-style: none;
       overflow: hidden;
@@ -87,6 +88,9 @@
       font-size: 11px;
       li{
         display: inline-block;
+      }
+      a{
+        display: inline-block;
         vertical-align: top;
         padding: 2px 10px;
         margin: 0 2px 5px 0;
@@ -95,8 +99,9 @@
         cursor: pointer;
         @include transition(0.3s);
       }
-      li:hover{
-        background-color: $gray-4;
+      a:hover{
+        background-color: $primary-color;
+        border-color: $primary-color;
         color: #fff;
       }
     }
@@ -233,7 +238,7 @@
   }
 }
 
-span.incdicateur_ouverture{
+span.indicateur_ouverture{
   float: right;
   display: inline-block;
   font-weight: normal;
@@ -243,11 +248,11 @@ span.incdicateur_ouverture{
   border-radius: 2px;
   text-transform: uppercase;
 }
-span.incdicateur_ouverture.ouvert{
-  border-color: greenyellow;
-  color: greenyellow;
+span.indicateur_ouverture.ouvert{
+  border-color: green;
+  color: green;
 }
-span.incdicateur_distance{
+span.indicateur_distance{
   float: right;
   display: inline-block;
   font-size: 12px;
