--- a/css/_responsive.scss
+++ b/css/_responsive.scss
@@ -305,6 +305,15 @@
     }
   }
   .page-banner{
+    .section-slider{
+      .article{
+        .article_picture_frame{
+          .event-data{
+            bottom: 0;
+          }
+        }
+      }
+    }
     .container{
       .page-title{
         small{
@@ -374,32 +383,6 @@
   }
   .page-etablissement{
     .social-sharing{
-      overflow: hidden;
-      ul{
-        list-style: none;
-        overflow: hidden;
-        float: left;
-
-        li{
-          float: left;
-          margin: 5px;
-
-          a{
-            color: $gray-5;
-            display: block;
-            width: 35px;
-            padding: 10px 0;
-            text-align: center;
-            background-color: $gray-1;
-            border-radius: 100%;
-            @include transition(0.3s);
-          }
-          a:hover{
-            background-color: $gray-3;
-            color: #fff;
-          }
-        }
-      }
       .incdicateur_ouverture{
         float: right;
         padding: 5px 15px;
@@ -417,6 +400,7 @@
         width: 100%;
         height: 225px;
         overflow: hidden;
+        margin-bottom: 15px;
       }
       .sub-section-title{
         font-weight: 700;
