--- a/css/_general.scss
+++ b/css/_general.scss
@@ -659,6 +659,7 @@ div.zabuto_calendar {
 
   .dropdown-item{
     padding: 10px 20px;
+    text-transform: none !important;
   }
   .active{
     .dropdown-item{
