--- a/css/_responsive.scss
+++ b/css/_responsive.scss
@@ -383,6 +383,13 @@
   }
   .page-etablissement{
     .social-sharing{
+      ul{
+        margin-bottom: 15px;
+        display: block;
+        width: 100%;
+      }
+
+
       .incdicateur_ouverture{
         float: right;
         padding: 5px 15px;
@@ -534,6 +541,10 @@
         padding-left: 15px;
       }
     }
+  }
+  span.indicateur_ouverture,
+  span.indicateur_distance{
+    float: none;
   }
 }
 
