--- a/css/_responsive.scss
+++ b/css/_responsive.scss
@@ -382,13 +382,14 @@
     }
   }
   .page-etablissement{
-    .social-sharing{
-      ul{
-        margin-bottom: 15px;
-        display: block;
-        width: 100%;
+    .liste-etablissements{
+      .list-item-image{
+        overflow: visible;
+        height: auto;
       }
-
+    }
+    .social-sharing{
+      margin-bottom: 15px;
 
       .incdicateur_ouverture{
         float: right;
@@ -405,8 +406,8 @@
         justify-content: center;
         align-items: center;
         width: 100%;
-        height: 225px;
-        overflow: hidden;
+        height: auto;
+        overflow: visible;
         margin-bottom: 15px;
       }
       .sub-section-title{
