--- a/css/style.css
+++ b/css/style.css
@@ -1880,24 +1880,25 @@ select.form_input {
     .page-404 .container .h1 {
       font-size: 6em; }
 
-  .page-etablissement .social-sharing ul {
-    margin-bottom: 15px;
-    display: block;
-    width: 100%; }
-  .page-etablissement .social-sharing .incdicateur_ouverture {
-    float: right;
-    padding: 5px 15px;
-    border: solid 1px #333333;
-    color: #333333;
-    text-transform: uppercase;
-    border-radius: 2px; }
+  .page-etablissement .liste-etablissements .list-item-image {
+    overflow: visible;
+    height: auto; }
+  .page-etablissement .social-sharing {
+    margin-bottom: 15px; }
+    .page-etablissement .social-sharing .incdicateur_ouverture {
+      float: right;
+      padding: 5px 15px;
+      border: solid 1px #333333;
+      color: #333333;
+      text-transform: uppercase;
+      border-radius: 2px; }
   .page-etablissement .section .logo_etablissement {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 225px;
-    overflow: hidden;
+    height: auto;
+    overflow: visible;
     margin-bottom: 15px; }
   .page-etablissement .section .sub-section-title {
     font-weight: 700;
