--- a/css/_general.scss
+++ b/css/_general.scss
@@ -98,6 +98,7 @@ a{
       .check-button{
         color: $text-icons-color;
         background-color: $primary-color;
+        padding: 10px 15px;
       }
 
     }
