--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,8 @@ a {
       position: relative; }
       .search_bar form .col-sm-6 .check-button {
         color: #fff;
-        background-color: #af1e27; }
+        background-color: #af1e27;
+        padding: 10px 15px; }
     .search_bar form .submit_button {
       border-radius: 0;
       font-size: 13px;
