--- a/css/style.css
+++ b/css/style.css
@@ -74,8 +74,12 @@ a {
         align-items: center;
         justify-content: center;
         cursor: pointer; }
+        .search_bar form .form_input label .fa {
+          color: #88171e; }
         .search_bar form .form_input label input {
           margin: 0; }
+      .search_bar form .form_input label.checked .fa {
+        color: #fff; }
     .search_bar form .col-sm-6 {
       position: relative; }
       .search_bar form .col-sm-6 .check-button {
