--- a/css/_responsive.scss
+++ b/css/_responsive.scss
@@ -550,6 +550,9 @@
   span.indicateur_distance{
     float: none;
   }
+  .admin-section .horaires .form_input{
+    margin: 5px 0;
+  }
 }
 
 @media (max-width: 640px){
