--- a/css/_general.scss
+++ b/css/_general.scss
@@ -143,7 +143,7 @@ a{
       input[type = text]{
         border: none;
         flex-grow: 5;
-        padding: 5px 10px;
+        padding: 6px 10px;
         background-color: #f8f8f8;
       }
       label{
@@ -154,8 +154,17 @@ a{
         justify-content: center;
         cursor: pointer;
 
+        .fa-check-circle{
+          color: darken($primary-color, 9%);
+        }
+
         input{
           margin: 0;
+        }
+      }
+      label.checked{
+        .fa-check-circle{
+          color: #fff;
         }
       }
     }
@@ -165,6 +174,7 @@ a{
       position: relative;
       .check-button{
         color: #fff;
+        padding: 0 20px;
         background-color: $primary-color;
       }
 
