--- a/css/_admin.scss
+++ b/css/_admin.scss
@@ -298,6 +298,12 @@ select.form_input{
   }
 }
 
+@media (max-width: 991px) {
+  .image-preview{
+    margin-bottom: 50px;
+  }
+}
+
 @media (max-width: 767px) {
   .body.admin{
     display: inherit;
