--- a/css/_responsive.scss
+++ b/css/_responsive.scss
@@ -68,6 +68,12 @@
       background-color: rgba(#fff, 0.8);
     }
   }
+  .gallery-fields{
+    .image-input,
+    .plus{
+      width: calc(50% - 10px);
+    }
+  }
 }
 @media (max-width: 767px) {
 
@@ -566,6 +572,14 @@
   }
   .admin-section .horaires .form_input{
     margin: 5px 0;
+  }
+  .gallery-fields{
+    display: block;
+    .image-input,
+    .plus{
+      width: 100%;
+      margin: 5px 0;
+    }
   }
 }
 
